<resources>
    <string name="app_name">AirBnb</string>
    <string name="finish_signing_up">Finish Signing Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="name_confirmation_alert">Make sure it matches the name on your government ID</string>
    <string name="birth_day">Birth Day</string>
    <string name="birthday_alert">To sign up, you need to be at least 18. Your birthday won\'t be shared to other people who use Aribnb</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="privacy_policy">By selecting Agree and continue below, I agree to Airbnb\'s Terms of Service, Payments Term sof Service, Privacy Policy, and Non discrimination Policy.</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="continue">Continue</string>
    <string name="login_or_sign_up">Login or sign up</string>
    <string name="continue">Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="room">Room</string>
</resources>